<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBrownLight"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/level_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/block_brown"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/block_brown"
            android:orientation="vertical">

            <TextView
                android:id="@+id/best_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/best_step"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/current_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="textStart"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <com.imagine.klotski.GameBoard
        android:id="@+id/game_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/block_brown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_brown"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/game_board">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                style="@style/Previous"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:onClick="toPrevious" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/previous_level" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                style="@style/Reset"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:onClick="restart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/restart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                style="@style/Next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:onClick="toNext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/next_level" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
